style.css
.container {
    margin-top: 40px;
    margin-right: auto;
    margin-left: auto;
    margin-bottom: 0px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 16px;
    width: 1024px;
    box-shadow: 10px 10px 40px -1px rgb(0 0 0 / 23%);
    border-radius: 2%;
}

.columns {
    display: flex;
    column-gap: 16px;
}

.column-left {
    width: 30%;
}
.column-right {
    width: 70%;
    margin-top: 40px;
    margin-right: 10px;
    padding-right: 10px;
}
a {
   text-decoration: none;
}

h3 {
    text-align: center;
    text-transform: uppercase;
}
.contacts ul {
    list-style: none;
}
.contacts li{
    display: list-item;
    vertical-align: baseline;
}
.contacts li img {
    vertical-align: middle;
}

footer {
    width: 1024px;
    margin: 20px auto;
    display: flex;

    justify-content: space-between;
    font-size: 0.3.em;
}
footer a {
    text-decoration: none;
    vertical-align: middle;
}
footer img {
    vertical-align: middle;
    margin-right: 5px;
}

.footer-rs {
    margin-top: 10px;

}
.footer-git {
    margin-top: 10px;
}

h2 {
    padding-left: 20px;
    padding-bottom: 5px;
    padding-top: 5px;
    border-bottom: 1px solid;
}

header {
    text-align: center;
}
header h2 {
    font-size: 18px;
    border-bottom: 0px;
    letter-spacing: 2px;
}

header img {
    margin-bottom: 10px;
    border: 1px solid gray;
    border-radius: 50%;
    filter: drop-shadow(8px 8px 10px gray);
}

pre{
    background-color: rgba(139, 139, 139, 0.1);
}

